# winzy-wc

./: README.md  pyproject.toml
tests/: test_winzy_wc.py
winzy_wc/: __init__.py
