[project]
name = "winzy-wc"
version = "0.1"
description = "Mimics the functionality of the 'wc' command"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-wc"
Changelog = "https://github.com/sukhbinder/winzy-wc/releases"
Issues = "https://github.com/sukhbinder/winzy-wc/issues"
CI = "https://github.com/sukhbinder/winzy-wc/actions"

[project.entry-points."winzy.plugins"]
wc = "winzy_wc:wc_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
